ordersystem/k8s/ordersystem_depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordersystem-deployment  # 올바른 이름으로 수정
  namespace: jiho
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ordersystem  # 단순 키-값 쌍으로 수정
  template:
    metadata:
      labels:
        app: ordersystem
    spec:
      containers:
      - name: ordersystem
        # aws의 ecr 주소 사용
        image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/jiho-ordersystem:latest
        ports:
        - containerPort: 8080
        resources:
          # 최대 할당가능량
          limits:
            cpu: "1"
            memory: "500Mi"
          # 최소 할당량
          requests:
            cpu: "0.5"
            memory: "250Mi"
